--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -854,7 +854,7 @@
                 </div>
                 <div style="width: 100%; margin: 0 auto;">
                     <iframe 
-                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1000!2d30.821650!3d-20.064991!2m3!1e0!2e1!3e0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0:0x0!2zMjDCsDA0JzA0LjQiUyAzMMKwNDknMjkuNiJF!5e0!3m2!1sen!2szw!4v1638360000000!5m2!1sen!2szw&t=k" 
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1000!2d30.8216485!3d-20.0650273!2m3!1e0!2e1!3e0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1ecce1479caf7e2f:0xb6fb410a43bc1074!2zRmxvIFBldHJvbGV1bQ!5e0!3m2!1sen!2szw!4v1638360000000!5m2!1sen!2szw&t=k" 
                         width="100%" 
                         height="400" 
                         style="border:0; border-radius: 10px; max-width: 100%;" 
@@ -863,7 +863,7 @@
                     </iframe>
                 </div>
                 <p style="color: white; margin-top: 15px;">
-                    <a href="https://maps.app.goo.gl/mD6CA8ePGnCKRR9x5" target="_blank" style="color: #00d4ff; text-decoration: none;">
+                    <a href="https://maps.app.goo.gl/KiEKUveQzFuQW6Yr9" target="_blank" style="color: #00d4ff; text-decoration: none;">
                         <i class="fas fa-map-marker-alt"></i> View on Google Maps
                     </a>
                 </p>
@@ -922,7 +922,7 @@
                 </div>
                 <div style="width: 100%; margin: 0 auto;">
                     <iframe 
-                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1000!2d30.821650!3d-20.064991!2m3!1e0!2e1!3e0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0:0x0!2zMjDCsDA0JzA0LjQiUyAzMMKwNDknMjkuNiJF!5e0!3m2!1sen!2szw!4v1638360000000!5m2!1sen!2szw&t=k" 
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1000!2d30.8216485!3d-20.0650273!2m3!1e0!2e1!3e0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1ecce1479caf7e2f:0xb6fb410a43bc1074!2zRmxvIFBldHJvbGV1bQ!5e0!3m2!1sen!2szw!4v1638360000000!5m2!1sen!2szw&t=k" 
                         width="100%" 
                         height="400" 
                         style="border:0; border-radius: 10px; max-width: 100%;" 
@@ -932,7 +932,7 @@
                     </iframe>
                 </div>
                 <p style="color: white; margin-top: 15px;">
-                    <a href="https://maps.app.goo.gl/mD6CA8ePGnCKRR9x5" target="_blank" style="color: #00d4ff; text-decoration: none;">
+                    <a href="https://maps.app.goo.gl/KiEKUveQzFuQW6Yr9" target="_blank" style="color: #00d4ff; text-decoration: none;">
                         <i class="fas fa-external-link-alt"></i> Open in Google Maps
                     </a>
                 </p>
